cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode
        # leetcode/sum_of_two_numbers.cpp
        # leetcode/sum_two_numbers_upd.cpp
        # leetcode/longest_palindromic.cpp
        # leetcode/invert_binary_tree.cpp
        # leetcode/delete_node_ll.cpp
        # leetcode/single_number_two.cpp
        # leetcode/perfect_squares.cpp
        # leetcode/july/arranging_coins.cpp
        # leetcode/july/bst_order_traversal_ii.cpp
        # leetcode/july/prison_cells_n_days.cpp
        # leetcode/july/ugly_number.cpp
        # leetcode/july/hamming_distance.cpp
        # leetcode/july/plus_one.cpp
        # leetcode/july/island_perimeter.cpp
        # leetcode/july/three_sum.cpp
        # leetcode/july/max_tree_width.cpp
        # algo/bfs.cpp
        # leetcode/july/flatten_ll.cpp
        leetcode/july/subsets.cpp)