cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode
        # leetcode/sum_of_two_numbers.cpp
        # leetcode/sum_two_numbers_upd.cpp
        # leetcode/longest_palindromic.cpp
        # leetcode/invert_binary_tree.cpp
        # leetcode/delete_node_ll.cpp
        # leetcode/single_number_two.cpp
        # leetcode/perfect_squares.cpp
        # leetcode/july/arranging_coins.cpp
        # leetcode/july/bst_order_traversal_ii.cpp
        # leetcode/july/prison_cells_n_days.cpp
        # leetcode/july/ugly_number.cpp
        # leetcode/july/hamming_distance.cpp
        # leetcode/july/plus_one.cpp
        # leetcode/july/island_perimeter.cpp
        # leetcode/july/three_sum.cpp
        # leetcode/july/max_tree_width.cpp
        # algo/bfs.cpp
        # leetcode/july/flatten_ll.cpp
        # leetcode/july/subsets.cpp
        # leetcode/july/subsets_cascading.cpp
        # leetcode/july/subsets_backtracking.cpp
        # arrays/remove_zeros.cpp
        # leetcode/july/reverse_bits.cpp
        # algo/can_win_nim.cpp
        # leetcode/july/is_same_tree.cpp
        # leetcode/july/angle_clock.cpp
        # leetcode/july/reverse_words.cpp
        # leetcode/july/pon_x_n.cpp
        # leetcode/july/topKFrequent.cpp
        # leetcode/july/remove_elements.cpp
        # leetcode/july/zigzag_level_order.cpp
        # leetcode/july/single_number_three.cpp
        # leetcode/july/find_min.cpp
        # leetcode/july/build_tree.cpp
        # leetcode/july/least_interval.cpp
        # leetcode/july/max_profit.cpp
        # leetcode/july/climbing_stairs.cpp
        # leetcode/august/detect_capital.cpp
        # leetcode/august/logger_rate_limiter.cpp
        # leetcode/august/my_hash_set.cpp
        # leetcode/august/is_palindrome.cpp
        # gi/numUniqueEmails.cpp
        # leetcode/august/powerOfFour.cpp
        # leetcode/august/wordDictionary.cpp
        # leetcode/august/isPalindromeDoublePoiunters.cpp
        # gi/numUniqueEmailsTrie.cpp
        # leetcode/august/findDuplicates.cpp
        # leetcode/august/verticalTraversal.cpp
        # leetcode/august/closestBSTValue.cpp
        # leetcode/august/pathSumThree.cpp
        # leetcode/august/arraySum.cpp
        # leetcode/august/rottingOranges.cpp
        # leetcode/august/rottingOrangesBFS.cpp
        # gi/oddEvenJump.cpp
        # leetcode/august/titleToNumber.cpp
        # leetcode/hIndex.cpp
        # leetcode/august/combinationIterator.cpp
        # leetcode/august/longestPalindrome.cpp
        # leetcode/august/eraseOverlapIntervals.cpp
        # leetcode/august/findPermutation.cpp
        # leetcode/august/maxProfit.cpp
        # leetcode/august/countNonOverlappingIntervals.cpp
        # leetcode/august/distributeCandies.cpp
        # leetcode/august/numsSameConseqDiff.cpp
        # functional/optional.cpp
        # leetcode/numsSameConsecDiffRepeat.cpp
        # leetcode/august/toGoatLatin.cpp
        # leetcode/august/reorderList.cpp
        # leetcode/reorderListRetake.cpp
        # leetcode/august/sortArraysByParity.cpp
        # leetcode/august/pickRandomPoint.cpp
        # leetcode/august/theMaze.cpp
        # leetcode/august/streamChecker.cpp
        # leetcode/august/sumOfLeftLeaves.cpp
        # leetcode/august/mincostTickets.cpp
        # leetcode/august/fizzBuzz.cpp
        # leetcode/sumOfSubarrayRetake.cpp
        # leetcode/august/findRightInterval.cpp
        # leetcode/august/rand7.cpp
        # rand10rejection.cpp
        # leetcode/august/pancakeSort.cpp
        # leetcode/august/robotRoomCleaner.cpp
        # leetcode/august/largestComponentFactorSize.cpp
        # leetcode/largestComponentRetake.cpp
        # leetcode/august/deleteNode.cpp
        # leetcode/august/removeNode.cpp
        # leetcode/september/largestTimeFromDigits.cpp
        # leetcode/september/read4.cpp
        # leetcode/september/findDuplicatesThree.cpp
        # retakes/readFour.cpp
        # leetcode/september/repeatedSubstring.cpp
        # leetcode/september/repeatedSubstr.cpp
        # leetcode/september/partitionLabels.cpp
        # leetcode/september/getAllElementsFromTwoTrees.cpp
        # leetcode/september/largestImageOverlap.cpp
        # leetcode/september/wordPattern.cpp
        # leetcode/september/sumOfRootToLeafBinaryNumbers.cpp
        # leetcode/september/movingAverageFromStream.cpp
        # leetcode/september/compareVersionNumbers.cpp
        # leetcode/september/subarraySumAndProd.cpp
        # retakes/maxSubArraySomething.cpp
        # leetcode/september/combinationSumThree.cpp
        # leetcode/september/houseRobber.cpp
        # leetcode/september/lengthOfTheLastWord.cpp
        # leetcode/september/bestTimeToBuyAndSell.cpp
        # leetcode/september/uniquePathsIII.cpp
        # leetcode/september/maximumXOR.cpp
        # leetcode/september/carPooling.cpp
        # leetcode/september/majorityElementII.cpp
        # leetcode/september/findTheDiffernece.cpp
        # leetcode/september/teemo_attacking.cpp
        # leetcode/september/largestNumber.cpp
        # leetcode/september/evaluateDivision.cpp
        # leetcode/september/numSubarrayProductLessThanK.cpp
        # gi/robotRoomCleaner.cpp
        # retakes/nProductsLessThan.cpp
        # retakes/robotRoomCleaner.cpp
        # leetcode/september/wordBreak.cpp
        # leetcode/september/wordSquares.cpp
        # leetcode/september/firstMissingPositive.cpp
        # retakes/wordBreak.cpp
        # retakes/yetAnotherRobotRoomCleaner.cpp
        # leetcode/october/recentCalls.cpp
        # retakes/recentCounter.cpp
        # leetcode/october/combinationSum.cpp
        # retakes/combinationCounts.cpp
        # leetcode/october/findPairs.cpp
        # leetcode/october/coveredIntervals.cpp
        # leetcode/october/bitwiseComplement.cpp
        # leetcode/october/maxDistanceInArrays.cpp
        # leetcode/october/insertBinaryTree.cpp
        # leetcode/october/rotateList.cpp
        # retakes/oneMoreRobotRoomCleaner.cpp
        # leetcode/october/binarySearch.cpp
        # retakes/binarySearchRetake.cpp
        # leetcode/october/de_serialize_tree.cpp
        # leetcode/october/findMinArrowShots.cpp
        # leetcode/october/removeDuplicatedLetters.cpp
        # leetcode/october/buddyStrings.cpp
        # retakes/binarySearch.cpp
        # leetcode/october/sortList.cpp
        # leetcode/october/sortListMerge.cpp
        # leetcode/october/houseRobber.cpp
        # leetcode/october/twoSum.cpp
        # leetcode/october/rotateArray.cpp
        # leetcode/october/seek2DMatrix.cpp
        # leetcode/october/buyAndSellStock4.cpp
        # leetcode/october/minDominoRotations.cpp
        # leetcode/october/clone_graph.cpp
        # leetcode/october/asteroidCollision.cpp
        leetcode/october/meetingRoomsTwo.cpp)
